services/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  tls:
    - hosts:
        - api.esportsdrafts.localhost
        - esportsdrafts.localhost
      secretName: tls-certificate
  rules:
    - host: esportsdrafts.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 8000
    - host: api.esportsdrafts.localhost
      http:
        paths:
          - path: /v1/auth
            backend:
              serviceName: auth
              servicePort: 8000
